--- a/index.tex
+++ b/index.tex
@@ -5,7 +5,23 @@
 \input{style/template}
 
 \begin{document}
-	% REPORT PREAMBLE
+	%	% 	%	%	%	%
+	% Preamble			%
+	%	% 	%	%	%	%
+	
+	% ARTICLE
+	\title{\LaTeX~Template}
+	\author{Lewis Wolstanholme}
+	\date{\getDate\today}
+	\maketitle
+
+	% JOURNAL
+	% \title{\LaTeX~Template}
+	% \subtitle{\getDate\today}
+	% \author{Lewis Wolstanholme}
+	% \maketitle
+
+	% REPORT
 	% \title{\LaTeX~Template}
 	% \author{Lewis Wolstanholme}
 	% \institution{School of Electronic Engineering and Computer Science \\ Queen Mary University of London}
@@ -13,23 +29,50 @@
 	% \date{\getDate\today}
 	% \maketitle
 	% \pagenumbering{roman}
-	% \begin{abstract}
+
+	%	% 	%	%	%	%
+	% Acknowledgements	%
+	%	% 	%	%	%	%
+
+	% \begin{acknowledgements}
 	% 	\dots
-	% \end{abstract}
+	% \end{acknowledgements}
+
+	%	% 	%	%	%	%
+	% Abstract			%
+	%	% 	%	%	%	%
+	
+	\begin{abstract}
+		\dots
+	\end{abstract}
+	
+	%	% 	%	%	%	%
+	% Body				%
+	%	% 	%	%	%	%
+	
 	% \tableofcontents
 	% \newpage
-	% \pagenumbering{arabic}
 	% \setcounter{chapter}{-1}
+	\pagenumbering{arabic}
+	\input{./src/document.tex}
+	\section{Test}
+	\dots\footnote{test}
 
-	\include{document}
+	%	% 	%	%	%	%
+	% Appendix			%
+	%	% 	%	%	%	%
 
 	% \begin{appendix}
 	% 	\dots
 	% \end{appendix}
 
-	% Bibliography - this is compiled from bib.bib
+	%	% 	%	%	%	%
+	% Bibliography		%
+	%	% 	%	%	%	%
+
 	\cleardoublepage{}
 	\phantomsection{}
 	\addcontentsline{toc}{chapter}{References}
-	\bibliography{bib}
+	\raggedright
+	\bibliography{./src/bib.bib}
 \end{document}
