--- a/index.tex
+++ b/index.tex
@@ -42,9 +42,9 @@
 	% Abstract			%
 	%	% 	%	%	%	%
 	
-	\begin{abstract}
-		\dots
-	\end{abstract}
+	% \begin{abstract}
+	% 	\dots
+	% \end{abstract}
 	
 	%	% 	%	%	%	%
 	% Body				%
@@ -55,8 +55,6 @@
 	% \setcounter{chapter}{-1}
 	\pagenumbering{arabic}
 	\input{./src/document.tex}
-	\section{Test}
-	\dots\footnote{test}
 
 	%	% 	%	%	%	%
 	% Appendix			%
