moved setcounter{chapter} to the template

--- a/style/template.tex
+++ b/style/template.tex
@@ -61,6 +61,7 @@
 		\titleformat*{\section}{\flushright\huge\bf}
 		\titleformat*{\subsection}{\flushleft\Large\bf}
 		\setcounter{secnumdepth}{0}
+		\AtBeginDocument{\setcounter{chapter}{-1}}
 	}{}
 \makeatother
 
