--- a/index.tex
+++ b/index.tex
@@ -24,11 +24,11 @@
 	% REPORT
 	% \title{\LaTeX~Template}
 	% \author{Lewis Wolstanholme}
+	% \supervisors{Prof. Andrew McPherson}
 	% \institution{School of Electronic Engineering and Computer Science \\ Queen Mary University of London}
 	% \project{PhD Thesis}
 	% \date{\getDate\today}
 	% \maketitle
-	% \pagenumbering{roman}
 
 	%	% 	%	%	%	%
 	% Abstract			%
