added unindented abstract for journal and article using \begin{abstract*}

--- a/style/template.tex
+++ b/style/template.tex
@@ -108,6 +108,7 @@
 			\pagebreak
 		}
 	}{
+		% Indented abstract
 		\renewenvironment*{abstract}{%
 			\vspace*{-22pt}
 			\setlength{\parindent}{0pt}
@@ -118,6 +119,10 @@
 		}{%
 			\endlist\par\bigskip
 		}
+		% Unindented abstract
+		\newenvironment*{abstract*}{%
+			\section*{Abstract}
+		}{}
 	}
 \makeatother
 
