edits and typos

--- a/style/template.tex
+++ b/style/template.tex
@@ -90,7 +90,7 @@
 % Labels & References
 \usepackage{prettyref}					% label and reference autoformatting
 \newrefformat{chapter}{\hyperref[{#1}]{chapter~\ref*{#1}}}
-\newrefformat{equation}{\hyperref[{#1}]{eqaution~\ref*{#1}}}
+\newrefformat{equation}{\hyperref[{#1}]{equation~\ref*{#1}}}
 \newrefformat{figure}{\hyperref[{#1}]{figure~\ref*{#1}}}
 \newrefformat{section}{\hyperref[{#1}]{section~\ref*{#1}}}
 \newrefformat{table}{\hyperref[{#1}]{table~\ref*{#1}}}
