--- a/style/template.tex
+++ b/style/template.tex
@@ -33,6 +33,8 @@
 \usepackage{pdfpages}					% include pdfs with \includepdf{link}
 \usepackage{xcolor}						% change font color with \textcolor{color}{text}
 \definecolor{off_black}{RGB}{34, 34, 34}
+% dots in brakcets, used for quotes
+\newcommand*{\bracketedDots}{[\,\dots]\ }
 
 % Images
 \usepackage{graphicx}					% import images with \includegraphics{filepath}
