subsubsection headers are right aligned

--- a/style/template.tex
+++ b/style/template.tex
@@ -74,6 +74,7 @@
 		}
 		\titleformat*{\section}{\flushright\huge\bfseries}
 		\titleformat*{\subsection}{\flushleft\Large\bfseries}
+		\titleformat*{\subsubsection}{\flushright\bfseries}
 		\setcounter{secnumdepth}{0}
 		\AtBeginDocument{\setcounter{chapter}{-1}}
 	}{}
